--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,18 @@ services:
     links:
     - redis
     command: python manage.py runserver 0.0.0.0:5000
+    environment:
+      - SQL_ENGINE=django.db.backends.postgresql
+      - SQL_DATABASE=postgres
+      - SQL_USER=postgres
+      - SQL_PASSWORD=postgres
+      - SQL_HOST=db
+      - SQL_PORT=5432
+      - DATABASE=postgres
+      - USE_S3=TRUE
+      - AWS_ACCESS_KEY_ID=UPDATE_ME
+      - AWS_SECRET_ACCESS_KEY=UPDATE_ME
+      - AWS_STORAGE_BUCKET_NAME=UPDATE_ME
     ports:
     - "5000:5000"
     depends_on:
